Optimize images & correct event listeners for page set on catalog.

--- a/public/partials/catalog-3.html
+++ b/public/partials/catalog-3.html
@@ -83,22 +83,22 @@
                         <div class="fb5-page-book">
                             <div id="fb5-cover">
                                 <ul>
-                                    <li><a href="javascript:setPage(2)"><img
-                                            data-src="app/img/catalog/pages/cover-photo7.jpg"></a></li>
+                                    <li><a><img
+                                            data-src="app/img/catalog/pages/cover-empty.jpg"></a></li>
                                     <li><a href="javascript:setPage(4)"><img
-                                            data-src="app/img/catalog/pages/cover-photo6.jpg"></a></li>
-                                    <li><a href="javascript:setPage(6)"><img
-                                            data-src="app/img/catalog/pages/cover-photo7.jpg"></a></li>
+                                            data-src="app/img/catalog/pages/cover-catalog.jpg"></a></li>
+                                    <li><a><img
+                                            data-src="app/img/catalog/pages/cover-empty.jpg"></a></li>
                                     <li><a href="javascript:setPage(2)"><img
-                                            data-src="app/img/catalog/pages/cover-photo1.jpg"></a></li>
+                                            data-src="app/img/catalog/pages/cover-coffee.jpg"></a></li>
                                     <li><a href="javascript:setPage(4)"><img
-                                            data-src="app/img/catalog/pages/cover-photo2.jpg"></a></li>
+                                            data-src="app/img/catalog/pages/cover-food.jpg"></a></li>
                                     <li><a href="javascript:setPage(6)"><img
-                                            data-src="app/img/catalog/pages/cover-photo3.jpg"></a></li>
+                                            data-src="app/img/catalog/pages/cover-raki.jpg"></a></li>
                                     <li><a href="javascript:setPage(8)"><img
-                                            data-src="app/img/catalog/pages/cover-photo4.jpg"></a></li>
+                                            data-src="app/img/catalog/pages/cover-wine.jpg"></a></li>
                                     <li><a href="javascript:setPage(10)"><img
-                                            data-src="app/img/catalog/pages/cover-photo5.jpg"></a></li>
+                                            data-src="app/img/catalog/pages/cover-coctails.jpg"></a></li>
                                 </ul>
                                 <img data-src="/app/img/logos/logo-stemfyla-195x150.png" id="fb5-logo-cover">
                             </div>
@@ -118,7 +118,7 @@
                 <!-- END PAGE 1 -->
 
                 <!-- BEGIN PAGE 2 -->
-                <div data-background-image="app/img/catalog/pages/2_3.jpg" class="">
+                <div data-background-image="app/img/catalog/pages/coffee.jpg" class="">
                     <!-- container page book -->
                     <div class="fb5-cont-page-book">
                         <!-- description for page from WYSWIG -->
@@ -134,7 +134,7 @@
                 <!-- END PAGE 2 -->
 
                 <!-- BEGIN PAGE 3 -->
-                <div data-background-image="app/img/catalog/pages/4_5.jpg" class="">
+                <div data-background-image="app/img/catalog/pages/food.jpg" class="">
                     <!-- container page book -->
                     <div class="fb5-cont-page-book">
                         <!-- description for page from WYSWIG -->
@@ -150,7 +150,7 @@
                 <!-- END PAGE 3 -->
 
                 <!-- BEGIN PAGE 4 -->
-                <div data-background-image="app/img/catalog/pages/6_7.jpg" class="">
+                <div data-background-image="app/img/catalog/pages/raki.jpg" class="">
                     <!-- container page book -->
                     <div class="fb5-cont-page-book">
                         <!-- description for page from WYSWIG -->
@@ -166,7 +166,7 @@
                 <!-- END PAGE 4 -->
 
                 <!-- BEGIN PAGE 5 -->
-                <div data-background-image="app/img/catalog/pages/8_9.jpg" class="">
+                <div data-background-image="app/img/catalog/pages/wine.jpg" class="">
                     <!-- container page book -->
                     <div class="fb5-cont-page-book">
                         <!-- description for page from WYSWIG -->
@@ -182,7 +182,7 @@
                 <!-- END PAGE 5 -->
 
                 <!-- BEGIN PAGE 6 -->
-                <div data-background-image="app/img/catalog/pages/8_9.jpg" class="">
+                <div data-background-image="app/img/catalog/pages/raki.jpg" class="">
                     <!-- container page book -->
                     <div class="fb5-cont-page-book">
                         <!-- description for page from WYSWIG -->
@@ -198,7 +198,7 @@
                 <!-- END PAGE 6 -->
 
                 <!-- BEGIN PAGE 7 -->
-                <div data-background-image="app/img/catalog/pages/6_7.jpg" class="">
+                <div data-background-image="app/img/catalog/pages/wine.jpg" class="">
                     <!-- container page book -->
                     <div class="fb5-cont-page-book">
                         <!-- description for page from WYSWIG -->
@@ -214,7 +214,7 @@
                 <!-- END PAGE 7 -->
 
                 <!-- BEGIN PAGE 8 -->
-                <div data-background-image="app/img/catalog/pages/10_11.jpg" class="">
+                <div data-background-image="app/img/catalog/pages/coctails.jpg" class="">
                     <!-- container page book -->
                     <div class="fb5-cont-page-book">
                         <!-- description for page from WYSWIG -->
@@ -229,8 +229,9 @@
                 </div>
                 <!-- END PAGE 8 -->
 
-                <!-- BEGIN PAGE 9 -->
-                <div data-background-image="app/img/catalog/pages/8_9.jpg" class="">
+
+                <!-- BEGIN PAGE 10 -->
+                <div data-background-image="app/img/catalog/pages/empty.jpg" class="">
                     <!-- container page book -->
                     <div class="fb5-cont-page-book">
                         <!-- description for page from WYSWIG -->
@@ -245,8 +246,9 @@
                 </div>
                 <!-- END PAGE 9 -->
 
-                <!-- BEGIN PAGE 10 -->
-                <div data-background-image="app/img/catalog/pages/10_11.jpg" class="">
+
+                <!-- BEGIN PAGE 11 -->
+                <div data-background-image="app/img/catalog/pages/credits.jpg" class="">
                     <!-- container page book -->
                     <div class="fb5-cont-page-book">
                         <!-- description for page from WYSWIG -->
@@ -255,38 +257,6 @@
                         <div class="fb5-meta">
                             <span class="fb5-description">Κατάλογος 2014</span>
                             <span class="fb5-num">10</span>
-                        </div>
-                    </div>
-                    <!-- end container page book -->
-                </div>
-                <!-- END PAGE 9 -->
-
-                <!-- BEGIN PAGE 11 -->
-                <div data-background-image="app/img/catalog/pages/empty.jpg" class="">
-                    <!-- container page book -->
-                    <div class="fb5-cont-page-book">
-                        <!-- description for page from WYSWIG -->
-                        <div class="fb5-page-book"></div>
-                        <!-- number page and title for page -->
-                        <div class="fb5-meta">
-                            <span class="fb5-description">Κατάλογος 2014</span>
-                            <span class="fb5-num">11</span>
-                        </div>
-                    </div>
-                    <!-- end container page book -->
-                </div>
-                <!-- END PAGE 10 -->
-
-                <!-- BEGIN PAGE 11 -->
-                <div data-background-image="app/img/catalog/pages/12.jpg" class="">
-                    <!-- container page book -->
-                    <div class="fb5-cont-page-book">
-                        <!-- description for page from WYSWIG -->
-                        <div class="fb5-page-book"></div>
-                        <!-- number page and title for page -->
-                        <div class="fb5-meta">
-                            <span class="fb5-description">Κατάλογος 2014</span>
-                            <span class="fb5-num">11</span>
                         </div>
                     </div>
                     <!-- end container page book -->
@@ -464,7 +434,7 @@
 
             <div class="row popup-gallery">
                 <div class="col-lg-1  col-md-2 col-sm-2 col-xs-6">
-                    <a href="javascript:setPage(2)" class="thumbnail image-link" title="">
+                    <a href="javascript:setPage(1)" class="thumbnail image-link" title="">
                         <img src="app/img/catalog/pages/thumbs/front.jpg" alt="Company working day image">
                     </a>
                 </div>
@@ -474,27 +444,27 @@
                     </a>
                 </div>
                 <div class="col-lg-1 col-xs-6 col-md-2 col-sm-2">
-                    <a href="javascript:setPage(4)" class="thumbnail image-link" title="">
+                    <a href="javascript:setPage(3)" class="thumbnail image-link" title="">
                         <img src="app/img/catalog/pages/thumbs/4_5_.jpg" alt="Company working day image">
                     </a>
                 </div>
                 <div class="col-lg-1 col-xs-6 col-md-2 col-sm-2">
-                    <a href="javascript:setPage(6)" class="thumbnail image-link" title="">
+                    <a href="javascript:setPage(4)" class="thumbnail image-link" title="">
                         <img src="app/img/catalog/pages/thumbs/6_7_.jpg" alt="Company working day image">
                     </a>
                 </div>
                 <div class="col-lg-1 col-xs-6 col-md-2 col-sm-2">
-                    <a href="javascript:setPage(8)" class="thumbnail image-link" title="">
+                    <a href="javascript:setPage(5)" class="thumbnail image-link" title="">
                         <img src="app/img/catalog/pages/thumbs/8_9_.jpg" alt="Company working day image">
                     </a>
                 </div>
                 <div class="col-lg-1 col-xs-6 col-md-2 col-sm-2">
-                    <a href="javascript:setPage(10)" class="thumbnail image-link" title="">
+                    <a href="javascript:setPage(8)" class="thumbnail image-link" title="">
                         <img src="app/img/catalog/pages/thumbs/10_11_.jpg" alt="Company working day image">
                     </a>
                 </div>
                 <div class="col-lg-1 col-xs-6 col-md-2 col-sm-2">
-                    <a href="javascript:setPage(12)" class="thumbnail image-link" title="">
+                    <a href="javascript:setPage(10)" class="thumbnail image-link" title="">
                         <img src="app/img/catalog/pages/thumbs/12_.jpg" alt="Company working day image">
                     </a>
                 </div>
