Add better quality background due to async loading.

--- a/public/app/css/main.css
+++ b/public/app/css/main.css
@@ -13,11 +13,8 @@
 }
 
 .full {
-    background: url("../img/backgrounds/background-1920x1080.jpg") no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    /*background: url("../img/backgrounds/background-1920x1080.jpg") no-repeat center center fixed;*/
+
 
 }
 
