Add 4th version for catalog page.

--- a/public/templates/header.html
+++ b/public/templates/header.html
@@ -29,6 +29,8 @@
                     <a role="menuitem" href="/#catalog-2">2η Έκδοση</a></li>
                 <li ng-class="{active: $route.current.activeTab == '#catalog-3'}" role="presentation">
                     <a role="menuitem" href="/#catalog-3">3η Έκδοση</a></li>
+                <li ng-class="{active: $route.current.activeTab == '#catalog-4'}" role="presentation">
+                    <a role="menuitem" href="/#catalog-4">4η Έκδοση</a></li>
             </ul>
         </div>
 
