--- a/public/partials/catalog.html
+++ b/public/partials/catalog.html
@@ -86,14 +86,18 @@
 
                         <!-- description for page  -->
                         <div class="fb5-page-book">
+
                             <div id="fb5-cover">
+                                <ul id="fb5-cover-title">
+                                    <li><img data-src="app/img/catalog/pages/cover-empty.jpg"></li>
+                                    <li><h2>Stemfyla</h2></li>
+                                    <li><img data-src="app/img/catalog/pages/cover-empty.jpg"></li>
+                                </ul>
                                 <ul>
-                                    <li><a href="javascript:setPage(2)"><img
-                                            data-src="app/img/catalog/pages/cover-empty.jpg"></a></li>
+                                    <li><img data-src="app/img/catalog/pages/cover-empty.jpg"></li>
                                     <li><a href="javascript:setPage(4)"><img
                                             data-src="app/img/catalog/pages/cover-catalog.jpg"></a></li>
-                                    <li><a href="javascript:setPage(6)"><img
-                                            data-src="app/img/catalog/pages/cover-empty.jpg"></a></li>
+                                    <li><img data-src="app/img/catalog/pages/cover-empty.jpg"></li>
                                     <li><a href="javascript:setPage(2)"><img
                                             data-src="app/img/catalog/pages/cover-coffee.jpg"></a></li>
                                     <li><a href="javascript:setPage(4)"><img
@@ -471,6 +475,11 @@
 
     <div class="container">
         <div class="row popup-gallery">
+            <div class="col-lg-2 col-xs-6 col-md-3">
+                <a href="javascript:setPage(2)" class="thumbnail image-link" title="">
+                    <img src="app/img/catalog/pages/thumbs/2_3_.jpg" alt="Company working day image">
+                </a>
+            </div>
             <div class="col-lg-2 col-xs-6 col-md-3">
                 <a href="javascript:setPage(2)" class="thumbnail image-link" title="">
                     <img src="app/img/catalog/pages/thumbs/2_3_.jpg" alt="Company working day image">
