--- a/public/app/css/header.css
+++ b/public/app/css/header.css
@@ -1,4 +1,3 @@
-
 .navbar {
     border-top: 1px solid #000000;
     border-bottom: 1px solid #000000;
@@ -6,7 +5,7 @@
     border-right: 0px;
     border-radius: 0px;
     min-height: 120px;
-    margin-bottom: 10px;
+    margin-bottom: 1em;
 }
 
 .navbar-default {
