--- a/public/app/css/main.css
+++ b/public/app/css/main.css
@@ -137,3 +137,19 @@ a {
     font-family: PFUniversal-Light, 'Roboto' !important;, sans-serif;
     color: black !important;
 }
+
+h1 {
+    font-weight: bolder;
+}
+
+hr {
+    border-top: 1px solid #5F021F;
+}
+
+legend {
+    border-bottom: 1px solid #5F021F;
+}
+
+h3{
+    font-weight: 600;
+}
