Center catalog's stemfyla title with content title

--- a/public/partials/catalog.html
+++ b/public/partials/catalog.html
@@ -94,9 +94,8 @@
                                     <li><img data-src="app/img/catalog/pages/cover-empty.jpg"></li>
                                 </ul>
                                 <ul>
-                                    <li><img data-src="app/img/catalog/pages/cover-empty.jpg"></li>
-                                    <li><a href="javascript:setPage(4)"><img
-                                            data-src="app/img/catalog/pages/cover-catalog.jpg"></a></li>
+                                    <li><img data-src="app/img/catalog/pages/cover-empty-less.jpg"></li>
+                                    <li id="catalog-title"><img data-src="app/img/catalog/pages/cover-catalog.jpg"></li>
                                     <li><img data-src="app/img/catalog/pages/cover-empty.jpg"></li>
                                     <li><a href="javascript:setPage(2)"><img
                                             data-src="app/img/catalog/pages/cover-coffee.jpg"></a></li>
