--- a/public/app/css/main.css
+++ b/public/app/css/main.css
@@ -150,6 +150,10 @@ legend {
     border-bottom: 1px solid #5F021F;
 }
 
-h3{
+h3 {
     font-weight: 600;
+}
+
+#catalog-title {
+    margin-left: 8px !important;
 }
