Pushed from Dropbox

--- a/public/templates/header.html
+++ b/public/templates/header.html
@@ -30,7 +30,7 @@
                         Κατάλογος </a></li>
                 <li ng-class="{active: $route.current.activeTab == '#live-events'}">
                     <a href="/#live-events"><i class="fa fa-circle fa-0x"></i>
-                        Ζωντανές Εκδηλώσεις </a></li>
+                        Εκδηλώσεις </a></li>
                 <li ng-class="{active: $route.current.activeTab == '#contact'}">
                     <a href="/#contact"><i class="fa fa-circle fa-0x"></i>
                         Επικοινωνία</a></li>
