Pushed from Dropbox

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -41,7 +41,7 @@
                 <img src="app/img/material/stemfyla4-sm.jpg" alt="Company working day image">
 
                 <div class="caption text-center">
-                    <h3>Ολα τα cocktail μας είναι φτιαγμένα με παραδοσιακά ελληνικά ποτά.</h3>
+                    <h3>Ολα τα cocktail μας είναι φτιαγμένα από παραδοσιακά αποστάγματα.</h3>
                 </div>
             </div>
         </div>
