Pushed from Dropbox

--- a/public/partials/catalog.html
+++ b/public/partials/catalog.html
@@ -52,9 +52,7 @@
             <section id="fb5-about">
                 <h3>Ποτά</h3>
 
-                <p>Όλα τα ποτά σερβίρονται με μεζέδες χωρίς χρέωση ωστόσο θα σας ανοίξουν την όρεξη για τα κυρίως
-                    πιάτα
-                    που περιλαμβάνει ο κατάλογος τα οποία βγαίνουν πάντα φρεσκομαγειρεμένα.</p>
+                <p>Όλα τα ποτά σερβίρονται με συνοδευτικά και προέρχονται από Ελληνες μικροπαραγωγούς.</p>
 
                 <p>&nbsp;</p>
 
@@ -69,7 +67,7 @@
                 <h3>Πρόταση</h3>
 
                 <p>Ο Γιώργος Καγιάς, ο υπεύθυνος στο Stemfyla, προτείνει μεσογειακό ριζότο με τοματίνια, λιαστή
-                    ντομάτα, φέτα, θυμάρι και φρέσκια ρίγανη, μοσχαράκι με γλυκό τραχανά και σουτζουκάκια.</p>
+                    ντομάτα, φέτα, θυμάρι και φρέσκια ρίγανη, σπιτικά κεφτεδάκια και εξαιρετικό παραδοσιακό κρητικό απάκι.</p>
 
                 <p>&nbsp;</p>
             </section>
