--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -11,9 +11,9 @@
             ηλεκτροκίνητο μηχάνημα πολτοποίησης. Αφού βγεί ο χυμός του
             σταφυλιού, μένει ένα υπόλειμα από φλούδες, κοτσάνια, και σπόρους του σταφυλιού. Το υπόλειμα αυτό, πού είναι
             μεγάλο σε ποσότητα λέγεται «στέμφυλα»</p>		
-		<p>Ετσι δημιουργήσαμε το <span style="font-weight: bold;">STEMFYLA Raki Bar</span>, έναν μοντέρνο χώρο ανοιχτό από το πρωί για καφέ
+		<p>Ετσι δημιουργήσαμε το <b>STEMFYLA Raki Bar</b>, έναν μοντέρνο χώρο ανοιχτό από το πρωί για καφέ
 		   μέχρι το βράδυ για εκλεκτούς μεζέδες και ποτοποιία αποκλειστικά απο έλληνες μικροπαραγωγούς... </p>
-		<p><span style="font-weight: bold;">Η ποιότητα, η εξυπηρέτηση και οι τιμές μας, εντυπωσιάζουν! Γι' αυτό σας περιμένουμε να μας γνωρίσετε από κοντά...!</span></p>	
+		<p><b>Η ποιότητα, η εξυπηρέτηση και οι τιμές μας, εντυπωσιάζουν! Γι' αυτό σας περιμένουμε να μας γνωρίσετε από κοντά...!</b></p>	
     </div>
 </div>
 
