--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -13,7 +13,7 @@
             μεγάλο σε ποσότητα λέγεται «στέμφυλα»</p>		
 		<p>Ετσι δημιουργήσαμε το <b>STEMFYLA Raki Bar</b>, έναν μοντέρνο χώρο ανοιχτό από το πρωί για καφέ
 		   μέχρι το βράδυ για εκλεκτούς μεζέδες και ποτοποιία αποκλειστικά απο έλληνες μικροπαραγωγούς... </p>
-		<p style="text-shadow: 4px 4px 2px rgba(0,0,0, 0.8);">Η ποιότητα, η εξυπηρέτηση και οι τιμές μας, εντυπωσιάζουν! Γι' αυτό σας περιμένουμε να μας γνωρίσετε από κοντά...!</b></p>	
+		<p style="rgba(0,0,0, 1);">Η ποιότητα, η εξυπηρέτηση και οι τιμές μας, εντυπωσιάζουν! Γι' αυτό σας περιμένουμε να μας γνωρίσετε από κοντά...!</b></p>	
     </div>
 </div>
 
