--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -13,7 +13,7 @@
             μεγάλο σε ποσότητα λέγεται «στέμφυλα»</p>		
 		<p>Ετσι δημιουργήσαμε το <strong style="font-size: 110%;">STEMFYLA Raki Bar</strong>, έναν μοντέρνο χώρο ανοιχτό από το πρωί για καφέ
 		   μέχρι το βράδυ για εκλεκτούς μεζέδες και ποτοποιία αποκλειστικά απο έλληνες μικροπαραγωγούς... </p>
-		<p><strong style="font-size: 110%;">Η ποιότητα, η εξυπηρέτηση και οι τιμές μας, εντυπωσιάζουν! Γι' αυτό σας περιμένουμε να μας γνωρίσετε από κοντά...!</strong></p>	
+		<p><strong style="font-family: Arial, Helvetica, sans-serif;">Η ποιότητα, η εξυπηρέτηση και οι τιμές μας, εντυπωσιάζουν! Γι' αυτό σας περιμένουμε να μας γνωρίσετε από κοντά...!</strong></p>	
     </div>
 </div>
 
