Pushed from Dropbox

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -11,7 +11,7 @@
             ηλεκτροκίνητο μηχάνημα πολτοποίησης. Αφού βγεί ο χυμός του
             σταφυλιού, μένει ένα υπόλειμα από φλούδες, κοτσάνια, και σπόρους του σταφυλιού. Το υπόλειμα αυτό, πού είναι
             μεγάλο σε ποσότητα λέγεται «στέμφυλα»</p>		
-		<p>Ετσι δημιουργήσαμε το <style="font-family: Arial, Helvetica, sans-serif;">STEMFYLA Raki Bar</style>, έναν μοντέρνο χώρο ανοιχτό από το πρωί για καφέ
+		<p>Ετσι δημιουργήσαμε το <strong style="font-family: Arial, Helvetica, sans-serif;">STEMFYLA Raki Bar</strong>, έναν μοντέρνο χώρο ανοιχτό από το πρωί για καφέ
 		   μέχρι το βράδυ για εκλεκτούς μεζέδες και ποτοποιία αποκλειστικά απο έλληνες μικροπαραγωγούς... </p>
 		<p><strong style="font-family: Arial, Helvetica, sans-serif;">Η ποιότητα, η εξυπηρέτηση και οι τιμές μας, εντυπωσιάζουν! Γι' αυτό σας περιμένουμε να μας γνωρίσετε από κοντά...!</strong></p>	
     </div>
