Pushed from Dropbox

--- a/public/partials/catalog.html
+++ b/public/partials/catalog.html
@@ -473,7 +473,7 @@
     <div class="container">
         <div class="row popup-gallery">
             <div class="col-lg-2 col-xs-6 col-md-3">
-                <a href="javascript:setPage(2)" class="thumbnail image-link" title="">
+                <a href="app/img/catalog/pages/coffee.jpg" class="thumbnail image-link" title="">
                     <img src="app/img/catalog/pages/thumbs/2_3_.jpg" alt="Company working day image">
                 </a>
             </div>
