--- a/public/partials/catalog.html
+++ b/public/partials/catalog.html
@@ -477,33 +477,33 @@
                     <img src="app/img/catalog/pages/thumbs/2_3_.jpg" alt="Company working day image">
                 </a>
             </div>
-            <div class="col-lg-2 col-xs-6 col-md-3">
+            <!-- <div class="col-lg-2 col-xs-6 col-md-3">
                 <a href="javascript:setPage(2)" class="thumbnail image-link" title="">
                     <img src="app/img/catalog/pages/thumbs/2_3_.jpg" alt="Company working day image">
                 </a>
-            </div>
+            </div>-->
             <div class="col-lg-2 col-xs-6 col-md-3">
-                <a href="javascript:setPage(4)" class="thumbnail image-link" title="">
+                <a href="app/img/catalog/pages/food.jpg" class="thumbnail image-link" title="">
                     <img src="app/img/catalog/pages/thumbs/4_5_.jpg" alt="Company working day image">
                 </a>
             </div>
             <div class="col-lg-2 col-xs-6 col-md-3">
-                <a href="javascript:setPage(6)" class="thumbnail image-link" title="">
+                <a href="app/img/catalog/pages/raki.jpg" class="thumbnail image-link" title="">
                     <img src="app/img/catalog/pages/thumbs/6_7_.jpg" alt="Company working day image">
                 </a>
             </div>
             <div class="col-lg-2 col-xs-6 col-md-3">
-                <a href="javascript:setPage(8)" class="thumbnail image-link" title="">
+                <a href="app/img/catalog/pages/wine.jpg" class="thumbnail image-link" title="">
                     <img src="app/img/catalog/pages/thumbs/8_9_.jpg" alt="Company working day image">
                 </a>
             </div>
             <div class="col-lg-2 col-xs-6 col-md-3">
-                <a href="javascript:setPage(10)" class="thumbnail image-link" title="">
+                <a href="app/img/catalog/pages/coctails.jpg" class="thumbnail image-link" title="">
                     <img src="app/img/catalog/pages/thumbs/10_11_.jpg" alt="Company working day image">
                 </a>
             </div>
             <div class="col-lg-2 col-xs-6 col-md-3">
-                <a href="javascript:setPage(12)" class="thumbnail image-link" title="">
+                <a href="app/img/catalog/pages/credits.jpg" class="thumbnail image-link" title="">
                     <img src="app/img/catalog/pages/thumbs/12_.jpg" alt="Company working day image">
                 </a>
             </div>
