Initialise live-events page.

--- a/public/partials/catalog.html
+++ b/public/partials/catalog.html
@@ -67,7 +67,8 @@
                 <h3>Πρόταση</h3>
 
                 <p>Ο Γιώργος Καγιάς, ο υπεύθυνος στο Stemfyla, προτείνει μεσογειακό ριζότο με τοματίνια, λιαστή
-                    ντομάτα, φέτα, θυμάρι και φρέσκια ρίγανη, σπιτικά κεφτεδάκια και εξαιρετικό παραδοσιακό κρητικό απάκι.</p>
+                    ντομάτα, φέτα, θυμάρι και φρέσκια ρίγανη, σπιτικά κεφτεδάκια και εξαιρετικό παραδοσιακό κρητικό
+                    απάκι.</p>
 
                 <p>&nbsp;</p>
             </section>
