--- a/public/app/css/header.css
+++ b/public/app/css/header.css
@@ -73,6 +73,9 @@
     }
 }
 
+/**
+ * Tablets
+**/
 @media (min-width: 768px) and (max-width: 991px) {
     .fa.fa-circle.fa-0x {
         font-size: .5em;
@@ -95,6 +98,9 @@
         padding-left: 0.7em;
     }
 
+    .navbar-header {
+        margin-left: 1.5em !important;
+    }
 }
 
 @media (min-width: 992px) and (max-width: 1199px) {
@@ -106,6 +112,11 @@
     .navbar-nav > li > a {
         line-height: 5.5em;
     }
+
+
+    .navbar-header {
+        margin-left: 1.7em !important;
+    }
 }
 
 @media (min-width: 1200px) {
@@ -113,4 +124,7 @@
         margin-left: .5em;
     }
 
+    .navbar-header {
+        margin-left: 3em !important;
+    }
 }
