--- a/public/templates/footer.html
+++ b/public/templates/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="container">
 
-        <div class="col-lg-3 col-lg-push-3 col-md-3 col-md-push-3 col-sm-4 col-sm-push-1 col-xs-9 col-xs-push-1 text-justify">
+        <div class="col-lg-3 col-lg-push-5 col-md-4 col-md-push-5 col-sm-4 col-sm-push-4 col-xs-9 col-xs-push-4 text-justify">
 
             <a href="https://www.facebook.com/stemfyla" id="facebook-logo"
                class="col-lg-2 col-md-3 col-sm-2 col-xs-2">
@@ -16,9 +16,9 @@
 
         </div>
 
-        <div class="col-lg-3 col-lg-push-3 col-md-3 col-md-push-3  col-sm-3 col-sm-push-3 col-xs-3 col-xs-pull-2">
-            Επικοινωνία
-        </div>
+        <!--<div class="col-lg-3 col-lg-push-3 col-md-3 col-md-push-3  col-sm-3 col-sm-push-3 col-xs-3 col-xs-pull-2">-->
+            <!--Επικοινωνία-->
+        <!--</div>-->
 
 
     </div>
