--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -7,7 +7,7 @@
 
         <p>Η ονομασία "Στέμφυλα" προέρχεται από την εξής διαδικασία: </p>
 
-        <p>Για να παραχθεί ο μούστος, τα σταφύλια παλιά τα πατούσαν με τα πόδια, ενώ σήμερα αυτό γίνεται με
+        <p id="home-main-p">Για να παραχθεί ο μούστος, τα σταφύλια παλιά τα πατούσαν με τα πόδια, ενώ σήμερα αυτό γίνεται με
             ηλεκτροκίνητο μηχάνημα πολτοποίησης. Αφού βγεί ο χυμός του
             σταφυλιού, μένει ένα υπόλειμα από φλούδες, κοτσάνια, και σπόρους του σταφυλιού. Το υπόλειμα αυτό, πού είναι
             μεγάλο σε ποσότητα λέγεται «στέμφυλα»</p>
