--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,57 +1,64 @@
-<div class="container">
+<div id="home-page-div">
 
-    <div class="text-center">
-        <p>
-            <img src="app/img/logos/logo-text-only.png" alt="Text logo"/>
-        </p>
 
-        <p>Η ονομασία "Στέμφυλα" προέρχεται από την εξής διαδικασία: </p>
+    <div class="container">
 
-        <p id="home-main-p">Για να παραχθεί ο μούστος, τα σταφύλια παλιά τα πατούσαν με τα πόδια, ενώ σήμερα αυτό γίνεται με
-            ηλεκτροκίνητο μηχάνημα πολτοποίησης. Αφού βγεί ο χυμός του
-            σταφυλιού, μένει ένα υπόλειμα από φλούδες, κοτσάνια, και σπόρους του σταφυλιού. Το υπόλειμα αυτό, πού είναι
-            μεγάλο σε ποσότητα λέγεται «στέμφυλα»</p>
+        <div class="text-center">
+            <p>
+                <img src="app/img/logos/logo-text-only.png" alt="Text logo"/>
+            </p>
 
-        <p>Ετσι δημιουργήσαμε το <strong style="font-family: Arial, Helvetica, sans-serif;">STEMFYLA Raki Bar</strong>,
-            έναν μοντέρνο χώρο ανοιχτό από το πρωί για καφέ
-            μέχρι το βράδυ για εκλεκτούς μεζέδες και ποτοποιία αποκλειστικά απο έλληνες μικροπαραγωγούς... </p>
+            <p>Η ονομασία "Στέμφυλα" προέρχεται από την εξής διαδικασία: </p>
 
-        <p><strong style="font-family: Arial, Helvetica, sans-serif;">Η ποιότητα, η εξυπηρέτηση και οι τιμές μας,
-            εντυπωσιάζουν! Γι' αυτό σας περιμένουμε να μας γνωρίσετε από κοντά...!</strong></p>
-    </div>
-</div>
+            <p id="home-main-p">Για να παραχθεί ο μούστος, τα σταφύλια παλιά τα πατούσαν με τα πόδια, ενώ σήμερα αυτό
+                γίνεται με
+                ηλεκτροκίνητο μηχάνημα πολτοποίησης. Αφού βγεί ο χυμός του
+                σταφυλιού, μένει ένα υπόλειμα από φλούδες, κοτσάνια, και σπόρους του σταφυλιού. Το υπόλειμα αυτό, πού
+                είναι
+                μεγάλο σε ποσότητα λέγεται «στέμφυλα»</p>
 
-<hr/>
+            <p>Ετσι δημιουργήσαμε το <strong style="font-family: Arial, Helvetica, sans-serif;">STEMFYLA Raki
+                Bar</strong>,
+                έναν μοντέρνο χώρο ανοιχτό από το πρωί για καφέ
+                μέχρι το βράδυ για εκλεκτούς μεζέδες και ποτοποιία αποκλειστικά απο έλληνες μικροπαραγωγούς... </p>
 
-<div class="container-fluid">
-    <div class="row popup-gallery">
-        <div class="col-sm-6 col-md-4">
-            <div class="thumbnail">
-                <img src="app/img/material/stemfyla1-sm.jpg" alt="Company working day image">
-
-                <div class="caption text-center">
-                    <h3>Παραδοσιακές αξίες σε μοντέρνο περιβάλλον.</h3>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <div class="thumbnail">
-                <img src="app/img/material/stemfyla6-sm.jpg" alt="Company working day image">
-
-                <div class="caption text-center">
-                    <h3>Χρησιμοποιούμε αποκλειστικά ελληνικά προιόντα για τα πιάτα μας.</h3>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <div class="thumbnail">
-                <img src="app/img/material/stemfyla4-sm.jpg" alt="Company working day image">
-
-                <div class="caption text-center">
-                    <h3>Ολα τα cocktail μας είναι φτιαγμένα από παραδοσιακά αποστάγματα.</h3>
-                </div>
-            </div>
+            <p><strong style="font-family: Arial, Helvetica, sans-serif;">Η ποιότητα, η εξυπηρέτηση και οι τιμές μας,
+                εντυπωσιάζουν! Γι' αυτό σας περιμένουμε να μας γνωρίσετε από κοντά...!</strong></p>
         </div>
     </div>
 
+    <hr/>
+
+    <div class="container-fluid">
+        <div class="row popup-gallery">
+            <div class="col-sm-6 col-md-4">
+                <div class="thumbnail">
+                    <img src="app/img/material/stemfyla1-sm.jpg" alt="Company working day image">
+
+                    <div class="caption text-center">
+                        <h3>Παραδοσιακές αξίες σε μοντέρνο περιβάλλον.</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <div class="thumbnail">
+                    <img src="app/img/material/stemfyla6-sm.jpg" alt="Company working day image">
+
+                    <div class="caption text-center">
+                        <h3>Χρησιμοποιούμε αποκλειστικά ελληνικά προιόντα για τα πιάτα μας.</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <div class="thumbnail">
+                    <img src="app/img/material/stemfyla4-sm.jpg" alt="Company working day image">
+
+                    <div class="caption text-center">
+                        <h3>Ολα τα cocktail μας είναι φτιαγμένα από παραδοσιακά αποστάγματα.</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
 </div>
