--- a/public/partials/live-events.html
+++ b/public/partials/live-events.html
@@ -1,7 +1,7 @@
 <div class="container">
-    <div class="row popup-gallery">
+    <div class="row popup-gallery center-block text-center">
 
-        <div class="col-lg-push-2 col-lg-4 col-md-push-2 col-md-5 col-xs-push-2 col-xs-7">
+        <div class="col-lg-4 col-lg-push-1 col-md-push-1 col-md-5 col-sm-5 col-xs-push-0 col-xs-7">
             <a href="app/img/live-events/ekd_kyriakh.jpg" class="thumbnail image-link" title="">
                 <img src="app/img/live-events/ekd_kyriakh.jpg" alt="Company working day image">
 
@@ -12,12 +12,17 @@
                 </div>
             </a>
         </div>
-    </div>
 
 
-    <div class="text-center">
-        Περισσότερες εβδομαδιαίες εκδηλώσεις θα ανακοινωθούν πολύ σύντομα!
+        <div class="col-lg-6 col-lg-push-1 col-md-push-1 col-md-5 col-sm-7 col-xs-push-0 col-xs-3">
+            <div class="row">
+                <div id="future-live-events-msg" class="text-center">
+                    Περισσότερες εβδομαδιαίες εκδηλώσεις θα ανακοινωθούν πολύ σύντομα!
+                </div>
+            </div>
+        </div>
     </div>
+
 </div>
 
 <!-- TODO: load scripts per page -->
