--- a/public/app/css/main.css
+++ b/public/app/css/main.css
@@ -188,3 +188,13 @@ h3 {
     display: flex;
     align-items: center;
 }
+
+.ng-invalid.ng-dirty, .error {
+    border-color: #FA787E;
+    color: #ff4500;
+    font-size: .9em;
+}
+
+.ng-valid.ng-dirty{
+    border-color: #78FA89;
+}
