--- a/public/partials/contact.html
+++ b/public/partials/contact.html
@@ -79,6 +79,7 @@
                              data-sitekey="6LcErwATAAAAAEEpxMH1DbLDt7qgTYNDCxHPosy3"></div>
                     </div>
                 </div>
+				<div class="g-recaptcha" data-sitekey="6LcgtwATAAAAAMQOtyywK6zvhHwwc-Vg_eVNIUig"></div>
                 <div class="form-group">
                     <div class="row text-center">
                         <button type="submit" class="btn btn-default">Αποστολή</button>
