--- a/public/partials/contact.html
+++ b/public/partials/contact.html
@@ -74,14 +74,26 @@
                 </div>
 
                 <div class="form-group">
-                    <div class="row">
-                        <div class="g-recaptcha"
-                             data-sitekey="6LcErwATAAAAAEEpxMH1DbLDt7qgTYNDCxHPosy3"></div>
+                    <div class="col-md-10 col-md-offset-1">
+                        <div
+                                vc-recaptcha
+                                theme="'light'"
+                                key="model.key"
+                                on-create="setWidgetId(widgetId)"
+                                on-success="setResponse(response)" class="pull-right"
+                                ></div>
+                        <div hidden="hidden" name="gRecaptchaResponse"
+                             ng-model="reservationCtrl.reservation.gRecaptchaResponse"></div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="row text-center">
-                        <button type="submit" class="btn btn-default">Αποστολή</button>
+                    <div class="col-md-10 col-md-offset-1 text-center">
+                        <button type="submit" class="btn btn-primary btn-lg">Αποστολή</button>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-md-10 col-md-offset-1">
                     </div>
                 </div>
             </fieldset>
@@ -89,3 +101,4 @@
     </div>
 
 </div>
+
