--- a/public/app/css/main.css
+++ b/public/app/css/main.css
@@ -191,7 +191,7 @@ h3 {
 
 .ng-invalid.ng-dirty, .error {
     border-color: #FA787E;
-    color: #ff4500;
+    color: #5f021f;
     font-size: .9em;
 }
 
