Pushed from Dropbox

--- a/public/partials/contact.html
+++ b/public/partials/contact.html
@@ -37,7 +37,7 @@
                                placeholder="Επίθετο"
                                ng-minlength="3" required class="form-control">
                         <span ng-show="reservationForm.lName.$dirty && !reservationForm.lName.$valid" class="error">Το
-                            Επίθετο είναι υποχρεωτικό. Ελάχιστο 3 χαρακτήρες.</span>
+                            Το επίθετο είναι υποχρεωτικό. Ελάχιστο 3 χαρακτήρες.</span>
                     </div>
                 </div>
 
@@ -47,7 +47,7 @@
                                placeholder="Email"
                                class="form-control" required>
                         <span ng-show="reservationForm.email.$dirty && !reservationForm.email.$valid" class="error">Η
-                            διεύθυνση ηλεκτρονικού ταχυδρομείου δεν είναι έγκυρη ή σε λάθος μορφή</span>
+                            διεύθυνση ηλεκτρονικού ταχυδρομείου δεν είναι έγκυρη.</span>
                     </div>
                 </div>
 
@@ -69,7 +69,7 @@
                                           ng-minlength="10"
                                           rows="3" required></textarea>
                         <span ng-show="reservationForm.message.$dirty && !reservationForm.message.$valid" class="error">
-                            Το μήνυμά σας είναι πολύ μικρό. Παρακαλώ προσθέστε μερικές περισσότερες λέξεις.</span>
+                            Το μήνυμά σας είναι πολύ μικρό. Παρακαλώ προσθέστε περισσότερες λέξεις.</span>
                     </div>
                 </div>
 
