Pushed from Dropbox

--- a/public/partials/contact.html
+++ b/public/partials/contact.html
@@ -37,7 +37,7 @@
                                placeholder="Επίθετο"
                                ng-minlength="3" required class="form-control">
                         <span ng-show="reservationForm.lName.$dirty && !reservationForm.lName.$valid" class="error">Το
-                            Το επίθετο είναι υποχρεωτικό. Ελάχιστο 3 χαρακτήρες.</span>
+                            Το Επίθετο είναι υποχρεωτικό. Ελάχιστο 3 χαρακτήρες.</span>
                     </div>
                 </div>
 
